# question_generator

backend/: pyproject.toml
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/auth/: AuthenticationPage.tsx  ClerkProviderWIthRoute.tsx
frontend/src/challenge/: ChallengeGenerator.tsx  MCQChallenge.tsx  useChallanges.tsx
frontend/src/history/: HistoryPanel.tsx  useHistory.tsx
frontend/src/layout/: Layout.tsx
frontend/src/utils/: api.ts
